src/objects/vlocity_ins__CalculationMatrixRow__c.object
<CustomObject>
    <description>Represents a row within a specific version of a Vlocity Calculation Matrix.</description>
    <fields>
        <fullName>vlocity_ins__CalculationMatrixVersionId__c</fullName>
        <label>Vlocity Calculation Matrix Version</label>
        <referenceTo>vlocity_ins__CalculationMatrixVersion__c</referenceTo>
        <relationshipName>Vlocity_Calculation_Table_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EndDateTime__c</fullName>
        <label>End Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of the matrix row. Used to identify the matrix row across Salesforce instances.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HashKey__c</fullName>
        <label>Hash Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InputData__c</fullName>
        <label>Input Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsCalculationMatrixVersionEnabled__c</fullName>
        <formula>vlocity_ins__CalculationMatrixVersionId__r.vlocity_ins__IsEnabled__c</formula>
        <label>Version Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OutputDataLong__c</fullName>
        <label>OutputDataLong</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OutputData__c</fullName>
        <label>OutputData</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StartDateTime__c</fullName>
        <label>Start Date / Time</label>
        <type>DateTime</type>
    </fields>
    <label>Vlocity Calculation Matrix Row</label>
    <nameField>
        <label>Input Data MD5 Hash</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Calculation Matrix Rows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>